# llm-rs

./: Cargo.toml
src/: lib.rs
src/ollama/: mod.rs
